relecture en cours

--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -1,8 +1,8 @@
-    Dans le cadre de notre deuxieme annee d'etude a l'Institut Superieur d'Informatique, de Modelisation et de leurs
-Applications, nous avons effectues un projet d'une duree de 240 heures entre novembre 2008 et mars 2009 sous la
+    Dans le cadre de notre troisième année d'étude a l'Institut Supérieur d'Informatique, de Modélisation et de leurs
+Applications, nous avons effectues un projet d'une durée de 240 heures entre novembre 2008 et mars 2009 sous la
 tutelle de Julien Ponge.
 
-Ameliorer un logiciel ne se resume pas a ajouter des fonctionnalites ou corriger de bugs. Faire du refactoring permet de rendre le code plus maintenable, lisible : le vieil adage ``ca fonctionne, alors on n'y touche pas'' a mene plus d'un projet dans l'impasse du code inmaintenable. Les resultats ne sont pas visibles, car d'un point de vue exterieur rien n'a change. Pourtant pour un developpeur cela signifie un developpement present et futur plus rapide et plus aise. La supression/remplacement d'une librairie obsolete entre dans ce cas.
+Améliorer un logiciel ne se résume pas a ajouter des fonctionnalites ou corriger de bugs. Faire du refactoring permet de rendre le code plus maintenable, lisible : le vieil adage ``ça fonctionne, alors on n'y touche pas'' a mené plus d'un projet dans l'impasse du code in-maintenable. Les résultats ne sont pas visibles, car d'un point de vue extérieur rien n'a change. Pourtant pour un développeur cela signifie un développement présent et futur plus rapide et plus aise. La suppression/remplacement d'une librairie obsolète entre dans ce cas.
 
-IzPack, un generateur d'installeur open-source possede justement une dependance de ce type avec NanoXml. Dans le cadre de notre projet de troisieme et derniere annee a l'ISIMA, nous avons ete charge du refactoring de cette partie.
+IzPack, un générateur d'installeur open-source possède justement une dépendance de ce type avec NanoXml. Dans le cadre de notre projet de troisième année a l'ISIMA, nous avons été chargé du refactoring de cette partie.
 % inspiration en baisse, ecriture suspendue
