--- a/latex/partie1.tex
+++ b/latex/partie1.tex
@@ -1,24 +1,39 @@
 %---------------------------------------------------------
 \section{Description}
-IzPack est un projet open-source crée en 2001 par Julien Ponge. C'est un generateur d'installeur et il presente a ce titre de nombreuses fonctionnalitees.
+IzPack est un projet open-source crée en 2001 par Julien Ponge. C'est un générateur d'installeur et il présente a ce titre de nombreuses fonctionnalités.
 \subsection{Générateur d'installeur}
-Une application, une fois realisee, necessite un certains nombre d'operations sur la machine pour etre operationnelle. Ces operations vont de la decompression de l'archive dans un repertoire au lancement de script de configuration en passant par la validation de la license et la creation de raccourcis. Creer un installeur pour une application est souvent laborieux et n'apporte que peu de plus-value au programme. 
+Une application, une fois réalisée, nécessite un certain nombre d'operations sur la machine pour être operationnelle.
+Ces operations vont de la décompression de l'archive dans un répertoire au lancement de scripts de configuration en passant par la validation de la licence et la création de raccourcis.
+Créer un installeur pour une application est souvent laborieux et n'apporte que peu de plus-value au programme. 
 
-L'interet d'Izpack reside dans le fait qu'il propose une solution pour creer cet installeur de maniere simple et universelle. En effet, a partir d'une application cree, Izpack est capable de generer un installateur. Cet installateur pourra etre utilise pour deployer l'application sur n'importe quelle machine. De plus, tout type de programme peut etre package, que ce soit une application C++ ou Java. Izpack se chargeant juste de la logique d'installation, il est totalement independant du contenu qu'il installe.
+L'intérêt d'Izpack réside dans le fait qu'il propose une solution pour créer cet installeur de manière simple et universelle.
+En effet, à partir d'une application existante, Izpack est capable de générer un installateur. Cet installateur pourra être utilisé pour déployer l'application sur n'importe quelle machine.
+De plus, tout type de programme peut être packagé, que ce soit une application C++ ou Java. Izpack se chargeant juste de la logique d'installation, il est totalement independant du contenu qu'il installe.
 \subsection{Open-source}
-Le projet Izpack est placee sous une license Open-source. A ce titre, le code source est librement selon les termes de la license. De plus, une communautee s'est regroupee autour du projet.
-\subsubsection{La communaute Izpack}
-Cette communaute open-source fait vivre et evoluer le projet. Les personnes rejoignant les projets sont des personnes aux motivations diverses. Ces personnes peuvent etre des passionnes interesse par le projet ou des salaries utilisant Izpack et apportant leurs contribution. Les formes de contributions sont variees. Elles peuvent prendre la forme d'aide aux utilisateurs, de readaction de documentation, de correction de bugs ou d'ajouts de fonctionnalites.
-\subsubsection{License}
-Izpack est sous license Apache 2. Cette license permet l'acces au code source et l'utilisation libre du logiciel. Il est tout a fait possible de l'utiliser pour une application commerciale voire meme, de modifier les sources pour correspondre a ses besoins. Une importante communaute s'est regroupee autour de ce projet ce qui a permit son evolution jusqu'a maintenant. Si un developpeur apporte des modifications utiles, il est encourage a en faire profiter la communaute, mais ce n'est pas une obligation.
+Le projet Izpack est placée sous une licence Open-source. A ce titre, le code source est librement accessible selon les termes de la licence. De plus, une communauté s'est regroupée autour du projet.
+\subsubsection{La communauté Izpack}
+Cette communauté open-source fait vivre et évoluer le projet. Les personnes rejoignant les projets sont des personnes aux motivations diverses.
+Ces personnes peuvent être des passionnés interessés par le projet ou des salariés utilisant Izpack et apportant leurs contributions.
+Les formes de contributions sont variées.
+Elles peuvent prendre la forme d'aide aux utilisateurs, de rédaction de documentation, de correction de bugs ou d'ajouts de fonctionnalités.
+\subsubsection{Licence}
+Izpack est sous licence Apache 2. Cette licence permet l'accès au code source et l'utilisation libre du logiciel.
+Il est tout à fait possible de l'utiliser pour une application commerciale voire même, de modifier les sources pour le faire correspondre à ses besoins.
+Une importante communauté s'est regroupée autour de ce projet ce qui a permis son évolution jusqu'à maintenant.
+Si un développeur apporte des modifications utiles, il est encouragé à en faire profiter la communauté, mais ce n'est pas une obligation.
 \subsection{Fonctionnalités}
-Izpack est un systeme modulaire, il possède de nombreuses fonctionnalités pour creer un installeur adapté a chacun.
+Izpack est un système modulaire, il possède de nombreuses fonctionnalités pour créer un installeur adapté à chacun.
 \subsubsection{Multi-plateforme}
-L'installeur generee par Izpack est un jar (java archive). Il suffit donc que la machine ait un machine virtuelle pour pouvoir lancer l'installation, indépendamment de la plateforme et du système d'exploitation. Il est neanmoins possibles de faire des traitements specifiques a certaines plateforme ou de convertir l'installeur pour etre specifique a une plateforme. 
+L'installeur généré par Izpack est un jar (java archive).
+Il suffit donc que la machine ait un machine virtuelle pour pouvoir lancer l'installation, indépendamment de la plateforme ou du système d'exploitation.
+Il est néanmoins possible de faire des traitements spécifiques à certaines plateformes ou de convertir l'installeur pour être spécifique a une plateforme.
 \subsubsection{Personnalisation}
-Izpack propose un ensemble de panels qui vont constituer l'installateur graphique. Chaque panels remplit une fonction specifique. L'aspect global et celui des panels est personnalisable par l'utilisateur via le descripteur XML.
+Chaque écran que verra l'utilisateur est décrit par un panel.
+Izpack propose un ensemble de panels qui vont constituer l'installateur graphique.
+Chaque panels remplit une fonction spécifique. L'aspect global de l'installeur et celui des panels est personnalisable par l'utilisateur via le descripteur XML.
 \subsubsection{Internationalisation}
-Izpack supporte la création d'installeur multilangues. Pour la localisation, tout repose sur des fichiers XML. Si une langue n'existe pas, il suffit de traduire les phrases/mots dans un fichier xml a utiliser lors de la creation de l'installeur.
+Izpack supporte la création d'installeur multilangues. Pour la localisation, tout repose sur des fichiers XML.
+Si une langue n'existe pas, il suffit de traduire les phrases/mots dans un fichier xml et de l'utiliser lors de la création de l'installeur.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=5cm]{../image/LangChoice.png}
@@ -29,23 +44,25 @@ A la fin de l'installation, il est possible de générer un script d'installatio
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=12cm]{../image/SaveInstallXML.png}
-	\caption{Fin d'installation, enregistrement du script d'installation automatisee}
+	\caption{Fin d'installation, enregistrement du script d'installation automatisée}
 \end{figure}
 \subsection{Popularité du projet}
-Izpack est utilisé dans de grand projets comme Jboss, Xwiki, Glassfish... A l'heure actuelle, les téléchargements mensuels s'élèvent a 25.000.
+Izpack est utilisé dans de grand projets comme Jboss, Xwiki, Glassfish... A l'heure actuelle, les téléchargements mensuels s'élèvent à 25.000.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.6\textwidth]{../image/telechargements.png}
-	\caption{Statistiques de telechargements}
+	\caption{Statistiques de téléchargements}
 \end{figure}
  %---------------------------------------------------------
 \section{Architecture}
 \subsection{Architecture globale}
-Globalement, Izpack possède 2 composants, le compilateur qui va gérer la création de l'installeur et l'installeur.
+Globalement, Izpack possède 2 composants, le compilateur qui va gérer la création de l'installeur et l'installeur lui-même.
 \subsection{Compilateur}
-Le compilateur package l'ensemble des fichiers nécessaires dans un seul fichier jar. Selon la description de l'installation, il va incorporer les panels nécessaires au lancement de celle-ci. Cette partie est utilisee par le developpeur qui souhaite creer un installeur.
+Le compilateur package l'ensemble des fichiers nécessaires dans un seul fichier jar.
+Selon la description de l'installation, il va incorporer les panels nécessaires au lancement de celle-ci.
+Cette partie est utilisée par le développeur qui souhaite créer un installeur.
 \subsection{Installeur}
-La partie installation concerne toute la logique et la présentation du processus d'installation. Cette partie sera executer par un utilisateur souhaitant installer le logiciel.
+La partie installation concerne toute la logique et la présentation du processus d'installation. Cette partie sera exécuter par un utilisateur souhaitant installer le logiciel.
 \subsection{Processus d'installation}
 Dans un premier temps, le compilateur va compiler l'application.
 \begin{figure}[H]
@@ -53,21 +70,21 @@ Dans un premier temps, le compilateur va compiler l'application.
 	\includegraphics[width=0.4\textwidth]{../image/archi_architecture.png}
 	\caption{Phase de compilation}
 \end{figure}
-L'installateur genere comprend l'application en elle-meme et toute la partie installation necessaire et adaptee au besoin de l'application. Cette application est alors prete a etre deployee sur une autre machine.
+L'installateur généré comprend l'application en elle-même et toute la partie installation nécessaire et adaptée aux besoins de l'application.
+Cette application est alors prête à être déployée sur une autre machine.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.4\textwidth]{../image/archi_installation.png}
 	\caption{Phase d'installation}
 \end{figure}
-Le processus d'installation est gere par la partie installeur de Izpack. Cette phase va permettre de deployer l'application sur toute les machines necessaires.
+Le processus d'installation est géré par la partie installeur de Izpack. Cette phase va permettre de déployer l'application sur toutes les machines nécessaires.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.3\textwidth]{../image/archi_installe.png}
-	\caption{Application deployee}
+	\caption{Application déployée}
 \end{figure}
 
 \subsubsection{Exemples de panels}
-Chaque ecran que verra l'utilisateur est decrit par un panel.
 Il existe de nombreux types de panels : des panel pour accueillir l'utilisateur et lui afficher des informations (HelloPanel et HTMLInfoPanel), d'autres pour demander à l'utilisateur des informations (UserInputPanel), etc.
 Il existe aussi des panels plus spécialisés. Ainsi, CompilePanel permet de compiler du code java, et ProcessPanel permet de lancer des programmes après l'installation.
 
@@ -78,10 +95,6 @@ Il existe aussi des panels plus spécialisés. Ainsi, CompilePanel permet de com
 De nombreux exemples complets existent, par exemple l'installeur de IzPack, celui de Glassfish, etc. Pour illustrer simplement l'utilisation de IzPack, utilisons plutôt le petit exemple fourni avec le code de l'application.
 
 \subsection{Description du xml}
-% un peu porc comme méthode, copier/coller une partie du xml...
-% mais je ne vois pas comment présenter ce xml
-% et puis ça suffira, au moins pour un premier jet
-
 Ce xml (install.xml) décrit complètement l'installation.
 Une balise \verb|info| permet de définir les informations concernant l'application : 
 \begin{lstlisting}[language=xml]
@@ -117,7 +130,7 @@ Les panels visibles par l'utilisateur sont décrits dans la balise \verb|panels|
 	<panel classname="FinishPanel"/>
 </panels>
 \end{lstlisting}
-Enfin la balise \verb|packs| contient la description des packs (les differentes parties, optionnelles ou non, de l'application) a installer.
+Enfin la balise \verb|packs| contient la description des packs (les différentes parties, optionnelles ou non, de l'application) à installer.
 \begin{lstlisting}[language=xml]
 <packs>
 	<pack name="Base" required="yes">
@@ -133,12 +146,12 @@ Enfin la balise \verb|packs| contient la description des packs (les differentes 
 \end{lstlisting}
 Bien sûr d'autres options existent, mais celles présentées ici suffisent à créer notre installeur.
 \subsection{Génération du jar}
-Pour générer notre installeur, il suffit d'avoir de lancer la commande suivante : (l'executable \verb|compile| provient de IzPack)
+Pour générer notre installeur, il suffit de lancer la commande suivante : (l'exécutable \verb|compile| provient de IzPack)
 \begin{verbatim}
 $ compile install.xml
 .::  IzPack - Version 4.1.0 ::.
 
-< compiler specifications version: 1.0 >
+< compiler spécifications version: 1.0 >
 
 - Copyright (c) 2001-2008 Julien Ponge
 - Visit http://izpack.org/ for the latest releases
@@ -166,7 +179,7 @@ Il suffit désormais de lancer le jar pour installer notre application.
 \end{figure}
 
 \subsection{Installation automatique}
-En lancant l'installeur avec un script d'installation automatisee en parametre, l'installation est rejouee a l'identique automatiquement.
+En lançant l'installeur avec un script d'installation automatisée en paramètre, l'installation est rejouée a l'identique automatiquement.
 \begin{verbatim}
 $ java -jar install.jar automated.xml
 [ Starting automated installation ]
@@ -183,12 +196,12 @@ $ java -jar install.jar automated.xml
  %---------------------------------------------------------
 \section{Problèmes actuels}
 IzPack possède, comme tout logiciel, des bugs potentiels ou des améliorations à effectuer.
-\subsection{Code obsolete}
-Izpack a debute en 2001. A cette epoque, la Jdk en etait a la version 1.3. Il y avait donc des fonctionnalitees absentes a cette epoques comme la genericite. On trouve ainsi du code comportant des tableaux d'objets ou des Vectors.
+\subsection{Code obsolète}
+Izpack a débuté en 2001. A cette époque, la Jdk en était à la version 1.3. Il y avait donc des fonctionnalités absentes comme la genericité. On trouve ainsi, encore maintenant, du code utilisant de vieilles structures de données (des tableaux d'objets ou des Vectors) ou des styles de programmation abandonnés.
 \subsection{Nanoxml}
 Une amélioration possible concerne la gestion des fichiers XML, qui ont une grande importance dans IzPack.
 
-L'abscence de processeur XML integre a la JRE 1.3 a force l'utilisation d'une librairie externe pour traiter les XML. IzPack se base donc sur nanoXML, une librairie Xml, choisie en raison de sa faible taille.
+L'absence de processeur XML intégré à la JRE 1.3 a forcé l'utilisation d'une librairie externe pour traiter les XML. IzPack se base donc sur nanoXML, une librairie Xml, choisie en raison de sa faible taille.
 Cette librairie n'est malheureusement plus mise à jour (la dernière mise à jour date de 2003) et possède encore quelques bugs.
 De plus, les versions récentes de l'environnement java (JRE) possèdent de base tout ce qu'il faut pour gérer le xml.
-Se débarasser de la dépendance à nanoXML et se reposer uniquement sur la JRE permet donc non seulement de rendre la gestion des XML plus sûre et robuste, mais également de diminuer la taille des installeurs générés.
+Se débarrasser de la dépendance à nanoXML et se reposer uniquement sur la JRE permettrait donc non seulement de rendre la gestion des XML plus sûre et robuste, mais également de diminuer la taille des installeurs générés.
