--- a/latex/partie2.tex
+++ b/latex/partie2.tex
@@ -9,11 +9,12 @@ Lighthouse est un gestionnaire de projet en ligne. Il se presente sous la forme 
 	\caption{Page d'accueil de Lighthouse}
 \end{figure}
 \subsection{Ticket}
-Les Tickets représentent un objectif à réaliser. Ils peuvent être crées par n'importe quel participant au projet. Ce ticket peut ensuite être assigner à une personne et possède plusieurs états.
+Les Tickets représentent des objectifs à réaliser. Ils peuvent être crées par n'importe quel participant au projet. Ce ticket peut ensuite être assigner à une personne et possède plusieurs états.
 \begin{description}
 \item[Nouveau] Le ticket vient d'être crée. Il peut être assigné (et le doit pour être traité).
 \item[Ouvert] Le ticket commence a être traité.
-\item[Clos] Le ticket a été résolu et est fermé.
+\item[Resolu] Le ticket a été résolu.
+\item[Clos] Le ticket n'a été résolu et a ete fermé.
 \end{description}
 Chacun de ces tickets peut être assigné à un sprint.
 \subsection{Sprint}
