--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -1,8 +1,9 @@
-    Dans le cadre de notre troisième année d'étude a l'Institut Supérieur d'Informatique, de Modélisation et de leurs
-Applications, nous avons effectues un projet d'une durée de 240 heures entre novembre 2008 et mars 2009 sous la
-tutelle de Julien Ponge.
+Dans le cadre de notre troisième année d'étude à l'Institut Supérieur d'Informatique, de Modélisation et de leurs Applications, nous avons effectué un projet d'une durée de 240 heures entre novembre 2008 et mars 2009 sous la tutelle de Julien Ponge.
 
-Améliorer un logiciel ne se résume pas a ajouter des fonctionnalites ou corriger de bugs. Faire du refactoring permet de rendre le code plus maintenable, lisible : le vieil adage ``ça fonctionne, alors on n'y touche pas'' a mené plus d'un projet dans l'impasse du code in-maintenable. Les résultats ne sont pas visibles, car d'un point de vue extérieur rien n'a change. Pourtant pour un développeur cela signifie un développement présent et futur plus rapide et plus aise. La suppression/remplacement d'une librairie obsolète entre dans ce cas.
+Améliorer un logiciel ne se résume pas à ajouter des fonctionnalités ou corriger de bugs.
+Faire du refactoring permet de rendre le code plus maintenable, lisible : le vieil adage ``ça fonctionne, alors on n'y touche pas'' a mené plus d'un projet dans l'impasse du code in-maintenable.
+Les résultats ne sont pas visibles, car d'un point de vue extérieur rien n'a changé. Pourtant pour un développeur cela signifie un développement présent et futur plus rapide et plus aisé.
+La suppression/remplacement d'une librairie obsolète entre dans ce cas.
 
 IzPack, un générateur d'installeur open-source possède justement une dépendance de ce type avec NanoXml. Dans le cadre de notre projet de troisième année a l'ISIMA, nous avons été chargé du refactoring de cette partie.
 % inspiration en baisse, ecriture suspendue
