Details partie3 Description solution xfragment

--- a/latex/master.tex
+++ b/latex/master.tex
@@ -97,10 +97,10 @@ pdfpagemode= UseOutlines,
 \pagestyle{plain}
 \input{partie1}
 %---------------------------------------
-\chapter{Methodes de travail}
+\chapter{Méthodes de travail}
 \input{partie2}
 %---------------------------------------
-\chapter{Travail realise}
+\chapter{Travail réalisé}
 \input{partie3}
 %---------------------------------------
 \chapter*{Conclusion \markboth{Conclusion}{}}
