--- a/latex/partie2.tex
+++ b/latex/partie2.tex
@@ -103,3 +103,4 @@ De plus, ses capacités de modification de code (refactoring) sont au dessus de 
 Yourkit est un outil de profiling. Il permet d'avoir un rapport détaillé sur l'utilisation des ressources par le programmes. On peut ainsi récupérer le nombre d'appel à une méthode, le temps passé dans une méthode, l'utilisation des ressources à un temps donné.
 
 Le but du profiling a été de repérer les optimisations possibles sur les modifications que l'on a opérées.
+%TODO Faire des snapshots yourkit
