--- a/latex/partie3.tex
+++ b/latex/partie3.tex
@@ -1,4 +1,3 @@
-% \section{État au commencement du projet}
 Le projet étant open-source et actif, il évolue sans cesse. La partie sur laquelle nous avons travaillé est relativement stable mais son utilisation peut varier dans le code. Nous allons voir la portée de l'utilisation de nanoXml, comment il est utilisé et enfin la solution apportée.
 
 % -> Utilisation intensive de XML
@@ -6,24 +5,29 @@ Le projet étant open-source et actif, il évolue sans cesse. La partie sur laqu
 % -> -> DOM : Tout est noeud
 % -> -> NanoXml : Base sur les tags (elements)
 \section{Nanoxml}
-Comme nous avons pu le voir, IzPack utilise intensément des fichiers XML pour gérer la génération d'installations.
+Comme nous avons pu le voir, IzPack utilise intensément des fichiers XML pour la génération d'installations.
 En effet, les fichiers XML présentent l'avantage d'être lisible, écrivable a la main et traitables.
 Pour traiter ces fichiers, une librairie a été utilisée, il s'agit de NanoXml.
 \subsection{Le projet NanoXml}
 NanoXml est une librairie java open-source de gestion de Xml.
-Elle présente la particularité d'être légère (108Ko). Il est possible, grâce a cette librairie, d'écrire ou de parser des fichiers Xml.
-Une fois le fichier parse, on récupère en mémoire la structure de l'arbre Xml qui peut alors être exploite.
-Le choix de cette librairie a été fait au commencement de Izpack a cause de sa taille.
-En effet, il est important que le la partie installeur ne prenne pas le pas sur le logiciel à installer.
+Elle présente la particularité d'être légère (108Ko). 
+Il est possible, grâce a cette librairie, d'écrire ou de parser des fichiers Xml.
+Une fois le fichier parsé, on récupère en mémoire la structure de l'arbre Xml qui peut alors être exploité.
+Le choix de cette librairie a été faite au commencement de Izpack a cause de sa taille.
+En effet, il est important que le la partie installeur ne surcharge pas excessivement sur le logiciel à installer.
 
 Cependant ce projet n'est plus mis à jour depuis 7 ans, et des bugs ont été découverts.
-Entre temps, java a ajoute a sa JRE (depuis la version 1.4) tout ce qu'il faut pour gérer le xml.
+Entre temps, java a ajouté a sa JRE (depuis la version 1.4) tout ce qu'il faut pour gérer le xml.
 Il devenait intéressant de remplacer NanoXml par Jaxp (Java API for XML Processing), la librairie fournie par la machine virtuelle.
 \subsection{Les différents composants de NanoXml}
 On trouve différents éléments dans NanoXml.
 \subsubsection{StdXMLParser}
 Le parser permet de créer un arbre logique représentant le fichier xml qui lui a été passé.
 Il est systématiquement utilisé au moment de la lecture du fichier afin de récupérer l'arbre.
+\subsubsection{StdXMLWriter}
+Le XMLWriter permet d'écrire des fichiers XML.
+Il reproduit, à partir d'un XMLElement, le fichier XML correspondant.
+Il n'est utilisé que pour générer un xml temporaire lors de la compilation ou pour écrire le xml d'installation automatique.
 \subsubsection{XMLElement}
 Le XMLElement représente un élément logique du xml en mémoire. Par exemple :
 \begin{lstlisting}[language=xml]
@@ -33,17 +37,12 @@ Le XMLElement représente un élément logique du xml en mémoire. Par exemple :
 	</child>
 </root>
 \end{lstlisting}
-En parsant un fichier contenant ce Xml, on obtient un XMLElement nomme root qui possède 1 enfant, \verb|child|. Son enfant est un XMLElement dont le contenu est ``content''.
+En parsant un fichier contenant ce Xml, on obtient un XMLElement nommé root qui possède 1 enfant, \verb|child|. Son enfant est un XMLElement dont le contenu est ``content''.
 
 L'arborescence du XML est donc réalisé par un ensemble de XMLElement.
-XMLElement permet de récupérer la liste des enfants, le contenu, rechercher un enfant par son nom, retirer un enfant, ajouter un enfant ou modifier le contenu.
+L'interface de XMLElement permet de récupérer la liste des enfants, le contenu, rechercher un enfant par son nom, retirer un enfant, ajouter un enfant ou modifier le contenu.
 Il s'agit de loin de la classe la plus utilisée de la librairie NanoXml dans Izpack.
 En effet, on ne comptait pas moins de 499 utilisations au commencement de ce projet.
-\subsubsection{StdXMLWriter}
-Le XMLWriter permet d'écrire des fichiers XML.
-Il reproduit, à partir d'un XMLElement, le fichier XML correspondant.
-Il n'est utilisé que pour générer un xml temporaire ou pour écrire le xml d'installation automatique.
-
 \subsection{Utilisation typique dans Izpack}
 \subsubsection{Parse de fichier}
 Le parse du fichier est exécuté pour récupérer le XML.
@@ -52,20 +51,19 @@ StdXMLParser parser = new StdXMLParser();
 parser.setBuilder(XMLBuilderFactory.createXMLBuilder());
 parser.setReader(new StdXMLReader(in));
 parser.setValidator(new NonValidator());
-
 // We get the data
 XMLElement data = (XMLElement) parser.parse();
 \end{lstlisting}
-Avec cet exemple, on crée les objets nécessaires au parse d'un fichier, et on récupère dans \verb|data| l'élément racine du xml.
-
+Avec cet exemple, on crée les objets nécessaires au parse d'un fichier, et on récupère dans \verb|data| la racine de l'arborescence du xml chargé en mémoire.
 \subsubsection{Écriture d'un xml}
 \begin{lstlisting}
 XMLWriter writer = new XMLWriter(out);
 ...
 writer.write(xmlElement);
 \end{lstlisting}
-Pour écrire un xml représenté par l'arbre DOM dans \verb|xmlElement|, il suffit de le passer à un XMLWriter.
-
+Le XMLWriter prend un OutputStream à sa contruction.
+On peut donc écrire un Xml dans tout type de flux de sortie. 
+Une fois le XMLWriter instancié, il suffit de lui passer le \verb|xmlElement| représentant la racine de l'arborescence que l'on veut écrire.
 \subsubsection{Utilisation de XMLElement}
 La manipulation d'un XMLElement se fait avec ses méthodes :
 \begin{itemize}
@@ -74,58 +72,48 @@ La manipulation d'un XMLElement se fait avec ses méthodes :
 	\item add/removeChild pour gérer les noeuds fils
 	\item etc
 \end{itemize}
-
 Voici un exemple d'utilisation :
 % TODO : avoir un exemple plus clair/concis
 \begin{lstlisting}
-XMLElement el;
+XMLElement root;
 //...
-String id = elt.getAttribute("id");
-String packImgId = el.getAttribute("packImgId");
-boolean loose = "true".equalsIgnoreCase(el.getAttribute("loose", "false"));
-String description = requireChildNamed(el, "description").getContent();
-boolean required = requireYesNoAttribute(el, "required");
-String group = el.getAttribute("group");
-String installGroups = el.getAttribute("installGroups");
-String excludeGroup = el.getAttribute("excludeGroup");
-boolean uninstall = "yes".equalsIgnoreCase(el.getAttribute("uninstall", "yes"));
-String parent = el.getAttribute("parent");
-String conditionid = el.getAttribute("condition");
+Iterator<XMLElement> iter = root.getChildrenNamed("parsable").iterator();
+while (iter.hasNext())
+{
+	XMLElement p = iter.next();
+	String target = requireAttribute(p, "targetfile");
+	String type = p.getAttribute("type", "plain");
+	//...
+}
 \end{lstlisting}
 \section{Jaxp}
-Jaxp, le processor Xml de Sun, respecte les normes W3C.
-Il y a deux manières d'exploiter les XML avec Jaxp, soit en utilisant le parseur Sax, soit en utilisant le parseur DOM.
+Jaxp, le processeur Xml de Sun, respecte les normes W3C.
+Il y a deux manières d'exploiter les XML avec Jaxp, soit en utilisant le parseur SAX, soit en utilisant le parseur DOM.
 \subsection{SAX}
 SAX (Simple API for Xml) est une API pour parser les XML.
 Cette API possède la particularité de procéder par évènement.
-C'est a dire que le parser va lire le fichier ligne par ligne et envoyé un évènement pour chaque élément particulier qu'il rencontre.
+C'est à dire que le parser va lire le fichier ligne par ligne et envoyer un évènement pour chaque élément particulier qu'il rencontre.
 
-On a des évènements de commentaires, de texte ou d'éléments.
-L'avantages de cette API est l'utilisation mémoire faible, puisque le xml n'est pas mis en mémoire mais lu et traité au fur et à mesure.
-Il permet de traiter sans problème les fichiers importants.
-En contrepartie, le traitement et la manipulation d'un xml est plus difficile.
+Des évènements sont lancés des que le parse rencontre des commentaires, du texte, des éléments...
+L'avantages de cette API est l'utilisation mémoire faible, puisque le xml n'est pas mis en mémoire mais lu et traité au fur et à mesure, il permet de traiter sans problème les fichiers importants.
+En contrepartie, le traitement et la manipulation du xml est plus difficile.
 \subsection{DOM}
-L'interface DOM (Document Object Model) de jaxp propose de mettre en mémoire le xml et offre une interaction basée sur des noeuds (node en anglais).
-En DOM tout est noeud, et le xml est équivalent à un arbre de noeuds.
-Les commentaires, le texte ou les éléments sont représentés par des noeuds.
-Des sous-classes spécialisent ces noeuds. comme \verb|Comment|, \verb|Element| ou \verb|Text|.
+L'interface DOM (Document Object Model) de Jaxp propose de mettre en mémoire le xml et offre une interaction basée sur des noeuds (node en anglais).
+En DOM tout est noeud, les commentaires, le texte ou les éléments sont représentés par des noeuds.
+Le xml est est représenté par une arborescence de noeuds.
+Des sous-classes spécialisent ces noeuds comme \verb|Comment|, \verb|Element| ou \verb|Text|.
 
 La manipulation des éléments du xml se fait grâce aux nodes.
 Il est possible de récupérer le voisin d'une node, d'enlever ou d'ajouter un enfant et de récupérer ou de modifier le contenu.
-
 %--------------------------------------------------------------------------
 \section{Élaboration de la solution}
-Notre travail a été de chercher une solution pour permettre de remplacer de NanoXml et de l'appliquer au projet. Mais ils y avaient plusieurs problèmes à cela.
-
+Notre travail a été de chercher une solution pour permettre de remplacer de NanoXml et de l'appliquer au projet.
+Cependant, ils y avaient plusieurs problèmes à cela.
 \subsection{Les différences entre Jaxp et NanoXml}
 Comme nous avons vu précédemment, les deux API ne proposent pas la même approche pour le traitement des fichiers xml.
 Nous avons choisi d'utiliser l'interface DOM vu que les avantages de SAX ne sont pas nécessaires et qu'il était peu concevable de traiter les XML avec SAX dans IzPack.
 De plus, NanoXml et DOM ont une représentation similaire du xml.
-
 Nous allons donc comparer l'interface DOM et NanoXml pour déterminer la meilleure approche a prendre.
-
-\subsubsection{Parse du XML}
-
 \subsubsection{Manipulation du XML}
 La principale différence vient de l'élément atomique : le noeud de DOM ne représente pas la même notion que l'élément de nanoXML.
 Dès lors, la manipulation des voisins, enfants, etc doit être adapté.
@@ -138,20 +126,17 @@ Dès lors, la manipulation des voisins, enfants, etc doit être adapté.
 Dans ce morceau de xml, nanoXML comptera 1 enfant à l'élément \verb|root| : \verb|noeud1|.
 DOM comptera 3 noeuds : du texte (le retour à la ligne et la tabulation), \verb|noeud1| et à nouveau du texte (un retour à la ligne).
 
-DOM possède néanmoins une interface dérivant de \verb|Node| : \verb|Element|, qui correspond à la classe \verb|XMLElement| de nanoXML.
-
+DOM possède néanmoins une interface dérivant de \verb|Node| : \verb|Element|, qui est trés similaire à la classe \verb|XMLElement| de nanoXML.
 \subsubsection{Contenu textuel du noeud}
 NanoXml propose une méthode pour récupérer le contenu textuel d'un noeud : \verb|getContent()|.
 DOM propose une méthode semblant équivalente : \verb|getNodeValue()|.
 Cependant, le comportement de ces deux méthodes est complètement différent.
-
 % TODO : exemple de code et differences
-
 \subsection{Solutions possibles}
 Pour remplacer NanoXml, plusieurs approches étaient possibles. 
 
 \subsubsection{Remplacer les appels individuellement}
-La première solution, bête et mechante, est de remplacer systématiquement les appels à NanoXml par des appels à Jaxp.
+La première solution, bête et méchante, est de remplacer systématiquement les appels à NanoXml par des appels à Jaxp.
 Cependant, cette solution a des inconvénients évidents :
 \begin{description}
 \item[La duplication de la logique] Tout le code nécessaire à l'utilisation du parseur ou du Node est réparti et dupliqué dans tout le programme.
@@ -159,11 +144,12 @@ C'est d'abord une infraction au principe DRY (don't repeat yourself) et rend le 
 Les bugs sont plus difficiles à cibler et la correction doit se faire sur toutes les replications.
 \item[Les difficultés de tester la solution] Un autre problème et le test de cette solution.
 Il faut en théorie passer par toutes les utilisations des appels pour tester correctement la solution. Cette contrainte est difficilement réalisable.
-\item[La penibilite de la tache] Remplacer chacun des nombreux appels à NanoXml par un appel Jaxp est très laborieux.
+\item[La pénibilite de la tache] Remplacer chacun des nombreux appels à NanoXml par un appel Jaxp est très laborieux.
 \end{description}
-
 \subsubsection{Centraliser la logique de modification}
-L'autre solution possible est de centraliser toute la logique de transaction dans des classes dédiées. Ces classes vont copier les interfaces de NanoXml mais vont générer en réalité des appels à Jaxp. C'est le principe du design pattern adaptateur.
+L'autre solution possible est de centraliser toute la logique de traduction dans des classes dédiées.
+Ces classes vont copier les interfaces de NanoXml mais vont générer en réalité des appels à Jaxp. 
+C'est le principe du design pattern adaptateur.
 
 Cela présente plusieurs avantages.
 \begin{description}
@@ -172,11 +158,9 @@ Cela présente plusieurs avantages.
 \end{description}
 \subsection{Création de l'adaptateur}
 Nous avons donc choisi la solution de l'adaptateur pour notre problème. Pour cela, nous avons procéder en plusieurs étapes.
-
 \subsection{Repérer les utilisations des classes de NanoXml}
 Dans un premier temps, nous avons repérer les classes utilisées par Izpack et les méthodes utilisées de ces classes.
 Nous avons réduits l'utilisation de NanoXml à 3 classes : \verb|StdXMLParser|, \verb|StdXMLWriter| et \verb|XMLElement|.
-
 \subsubsection{StdXMLParser et StdXMLWriter}
 Les classes \verb|StdXMLParser| et \verb|StdXMLWriter| sont utilisées avec parcimonie.
 On compte une trentaine d'utilisations pour \verb|StdXMLParser| et 8 utilisations pour \verb|StdXMLWriter|.
@@ -186,11 +170,11 @@ Ces deux classes ont donc été remplacées par 2 nouvelles classes réalisant l
 Nous avons créé les interfaces \verb|IXmlParser| et \verb|IXmlWriter| ainsi que leurs implémentations.
 Ce ne sont pas des adaptateurs de NanoXml étant donnés qu'elles ne recopient pas l'interface de NanoXml et elles ne sont pas indispensables.
 Cependant, elles permettent de simplifier l'utilisation de Jaxp et de factoriser le code sur un endroit.
-
 \subsubsection{XMLElement}
 \verb|XMLElement| ne présente pas d'interface et est utilisé systématiquement quand il y a du XML à traiter.
-Il était donc impensable de traiter et remplacer toutes les utilisations de XMLElement par des appels à Jaxp étant donné son nombre d'utilisation.
+Il était donc impensable de traiter et remplacer toutes les utilisations de XMLElement par des appels à Jaxp étant donné son nombre d'utilisation (499 utilisations).
 Nous avons donc concentré nos efforts sur cette classe et appliquer le pattern adaptateur dessus.
+Nous avons pour cela procédé en plusieurs étapes.
 
 Dans un premier temps, nous avons extrait l'interface de \verb|XMLElement| avec toutes les méthodes utilisées par Izpack.
 \begin{figure}[H]
@@ -208,26 +192,20 @@ Izpack utilise alors la même interface mais notre implémentation était utilis
 	\caption{Implémentation de l'adaptateur}
 \end{figure}
 Il suffit alors de supprimer NanoXml, ses utilisations ayant été remplacés par notre implémentation.
-
-\subsection{Fonctionnalites supplémentaires}
-% TODO :réécrire la phrase :s
-% Anthonin, je ne sais pas ce que tu voulais dire
-% NanoXml présentait de nombreuses lacunes au niveau respect des standards et fonctionnalités. Cependant, il proposait des fonctionnalites évoluées par rapport a une utilisation standard de Jaxp. Comme ces fonctionnalités étaient utilisées, il nous a fallut les reimplementer.
-\subsubsection{Xinclude}
-La balise \verb|xinclude| permet d'inclure un fichier xml externe.
-Ainsi, on peut utiliser un xml très succinct (et donc facilement lisible/compréhensible) qui inclut d'autres fichiers xml décrivant uniquement certaines parties de l'installation. 
+\subsection{Implémentation de Xinclude}
+Avec NanoXml, la balise \verb|xinclude| permet d'inclure un fichier xml externe.
+Ainsi, on peut utiliser un xml très succinct (et donc facilement lisible/compréhensible) qui inclut d'autres fichiers xml décrivant uniquement certaines parties de l'installation.
 Cette fonctionnalité, absente de nanoXML, avait été mise en place en modifiant directement le code de son parseur.
 
-Cette fonctionnalité est présente de base dans Jaxp.
-Il faut pour cela que le parser prenne en compte les espaces de nommage (namespaces) XML.
+Xinclude est présente dans les normes W3C et Jaxp l'intègre dans son implémenetation.
+Pour que Jaxp prenne en compte les balises Xinclude, il faut que le parser prenne en compte les espaces de nommage (namespaces) XML.
 En effet, le Xinclude appartient au namespace \verb|xi|.
 Il faut donc utiliser la balise \verb|<xi:include/>| au lieu de \verb|<xinclude/>|.
 Le simple fait de rendre le parser namepaceAware permet d'utiliser la fonctionnalité Xinclude.
-
-\subsubsection{Xfragment}
-La fonctionnalité Xfragment n'est pas présente dans les spécifications du W3C.
-Elle permet principalement d'ajouter des éléments sans racines avec Xinclude.
-C'est à dire qu'au contenu du xml à ajouter, on va retirer les noeuds <xfragment>. Par exemple:
+\subsection{Implémentation de Xfragment}
+La fonctionnalité Xfragment permet principalement d'ajouter des éléments sans racines avec Xinclude.
+C'est à dire qu'au contenu du xml à ajouter, on va retirer les noeuds <xfragment>. 
+Par exemple:
 \begin{lstlisting}[language=xml]
 <xfragment>
 <root1>
@@ -243,11 +221,42 @@ Sans le xfragment, le Xml ne serait pas valide (plusieurs éléments racine) et 
 Le Xfragment agit ici comme conteneur temporaire d'éléments.
 
 Cette fonctionnalité a été rajouté a NanoXml et il était nécessaire de la conserver.
-Cependant, elle ne fait pas partie des spécifications W3C et le parseur n'offrait pas de base cette fonctionnalité.
-Il a fallut trouver une solution pour assurer la continuité.
-
-% TODO : expliquer la solution retenue
-
+Cependant, elle ne fait pas partie des spécifications W3C et le parseur n'offre pas de base cette fonctionnalité.
+Il a fallut trouver une solution pour implémenter cette fonctionnalité.
+\subsubsection{Première solution, manipulation du DOM}
+Une première solution est de modifier le DOM obtenu après le parse du XML. 
+Il faudrait chercher les noeuds nommer Xfragment et les supprimer.
+Cependant, la suppression d'un noeud en DOM entraîne la suppression de tout les éléments qu'il contient.
+Il faudrait donc au préalable sauvegarder le contenu, supprimer l'élément et restaurer le contenu sauvegardé.
+\subsubsection{Deuxième solution, surcharge du parseur}
+Une autre solution est de procéder de la même manière que pour ce qui a été fait pour NanoXml.
+C'est à dire de modifier le parseur pour traiter les xfragment de manière spécifique.
+Cependant, cette solution, possible sous NanoXml, est difficilement réalisable sur Jaxp. 
+En effet, les appels du parseur sont transmis vers des classes internes et difficilement manipulables.
+\subsubsection{Troisième solution, transformation XSL}
+La troisième solution a été proposé par Matthew Fudge, la personne ayant rajouté la gestion des Xfragment et Xinclude dans NanoXml pour IzPack.
+Elle consiste a transformer l'arbre xml obtenue après le parse grâce à une transformation XSL(Extensible Stylesheet Language).
+Les transformations XSL permette de définir des règles de modification d'un XML et se présente lui-même sous la forme d'un XML.
+Elles permettent de modifier facilement des XML de manière simple.
+Elle convenait parfaitement à notre problème.
+La feuille de style utilisé est la suivante :
+\begin{lstlisting}[language=xml]
+<xsl:stylesheet xmlns:xsl='http://www.w3.org/1999/XSL/Transform' version='1.0'>
+    <xsl:template match="*">
+        <xsl:copy>
+            <xsl:copy-of select="@*"/>
+            <xsl:apply-templates/>
+        </xsl:copy>
+    </xsl:template>
+    <xsl:template match="xfragment">
+        <xsl:apply-templates/>
+    </xsl:template>
+</xsl:stylesheet>
+\end{lstlisting}
+La règle appliquée sur un élément est la plus spécifique. 
+Ici, pour tout les éléments, on recopie l'élément.
+Dans le cas du xfragment, on omet la copie. 
+Au final, le xfragment est supprimé du XML ce qui est le but recherché.
 \subsubsection{Numéro de ligne}
 Une fonctionnalité de nanoXML est la gestion des numéros de lignes. Lors qu'une incohérence est détectée dans un xml lu, IzPack prévient l'utilisateur de l'erreur, et indique le numéro de la ligne responsable dans le xml.
 
@@ -271,7 +280,7 @@ Afin d'avoir un comportement le plus fidèle possible à celui de nanoXML, de no
 \subsubsection{Test unitaires de comparaison}
 La solution a d'abord été élaborée de manière isolée. Le projet contenait notre adaptateur et la librairie NanoXml.
 Nous avons alors réalisé une batterie de tests couvrant toutes les méthodes de l'interface extraites et de très nombreux cas.
-Ces tests unitaires effectuent des actions identiques avec notre adaptateur et NanoXML, et comparent les résultats. 
+Ces tests unitaires effectuent des actions identiques avec notre adaptateur et NanoXML, et comparent les résultats.
 
 Prenons l'exemple de la méthode \verb|getName()|. Le même fichier Xml est parsé par les 2 librairies.
 Un parcours récursif de l'arbre XML est effectué sur les 2 arbres en mémoire.
